[NETBEANS-7069] Support Nashorn 15.x for JDK >= 15
Netbeans does support debugging of legacy Nashorn JavaScript engine
bundled with OpenJDK < 15.0. It does not support the the most recent
Nashorn 15.4 extracted from OpenJDK, that has different package name.

Change allows debugging both legacy Nashorn JavaScript and also
extracted Nashorn with new org.openjdk.nashorn package name.